[package]
name = "nekew"
version = "0.1.0"
authors = ["lain || Xavier Fernandez <xavier.fernandez92@myhunter.cuny.edu>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Xavulu/nekew"
description = "A feline themed file encryption cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
paris = "1.5" 
rpassword = "5.0"
color-eyre = "0.5"
colored = "2.0.0" 
file_shred = "1.1.0" 
sodiumoxide = "0.2.6"
tracing = "0.1.22" 

[[bin]]
name = "nekew"
test = false 
bench = false

[profile.release]
opt-level = 'z'
lto = true  
